[project]
name = "db-monitor-foundation"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "oracledb>=3.4.0",
  "psycopg[binary]>=3.2.0",
  "PyMySQL>=1.1.0",
  "redis>=6.0.0",
  "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "mypy>=1.18.0",
  "pytest>=8.4.0",
  "ruff>=0.12.0",
  "types-PyMySQL>=1.1.0",
]

[tool.uv]
package = false

[tool.mypy]
python_version = "3.12"
strict = true
files = ["apps"]
exclude = "(^lepus-v3\\.8/|^\\.agents/|^\\.claude/|^\\.codex-tasks/|^\\.playwright/|^\\.playwright-cli/)"

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
  ".venv",
  ".agents",
  ".claude",
  ".codex-tasks",
  ".playwright",
  ".playwright-cli",
  "lepus-v3.8"
]

[tool.pytest.ini_options]
pythonpath = ["apps/api/src"]
testpaths = ["tests"]
